--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,8 @@ header {
   text-align: center;
 }
 
-.heading-upper, .heading-lower {
+.heading-upper,
+.heading-lower {
   font-size: 2rem;
   font-weight: 200;
 }
@@ -58,6 +59,43 @@ p {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: auto;
+}
+
+.card:nth-of-type(1) {
+  grid-row: 2/3;
+  border-top: 5px solid #45d3d3;
+}
+
+.card:nth-of-type(2) {
+  grid-row: 1/3;
+  grid-column: 2/3;
+  border-top: 5px solid #d93654;
+}
+
+.card:nth-of-type(3) {
+  grid-row: 3/4;
+  grid-column: 2/3;
+  border-top: 5px solid #fcaf4a;
+}
+
+.card:nth-of-type(4) {
+  grid-row: 2/3;
+  border-top: 5px solid #549ef2;
+}
+
+.card__heading {
+  font-weight: 600;
+  font-size: 1.1rem;
+  grid-column: 1/-1;
+}
+
+.card__content {
+  color: #a3a5ae;
+  grid-column: 1/-1;
+}
+
+.card__image {
+  grid-column: 3/4;
 }
 
 /*# sourceMappingURL=main.css.map */
