--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,50 +1,88 @@
-@import 'mixins';
-@import 'variables';
+@import "mixins";
+@import "variables";
 
-*{
-    @include reset-browser-defaults;
+* {
+  @include reset-browser-defaults;
 }
 
-body{
-    @include set-default-styles;
-    background-color: #fafafa;
+body {
+  @include set-default-styles;
+  background-color: #fafafa;
 }
 
-.container{
-    @include flex(column);
+.container {
+  @include flex(column);
 }
 
-header{
-    margin: auto;
-    @include margin-top(4rem);
-    max-width: 600px;
-    text-align: center;
+header {
+  margin: auto;
+  @include margin-top(4rem);
+  max-width: 600px;
+  text-align: center;
 }
 
-.heading-upper,.heading-lower{
-    font-size: 2rem;
-    font-weight: 200;
+.heading-upper,
+.heading-lower {
+  font-size: 2rem;
+  font-weight: 200;
 }
 
-.heading-lower{
-    font-weight: 600;
+.heading-lower {
+  font-weight: 600;
 }
 
-p{
-    color: $gray;
-    font-size: .9rem;
+p {
+  color: $gray;
+  font-size: 0.9rem;
 }
 
-.cards{
-    @include margin-top(3rem);
-    display: grid;
-    grid-template-columns: auto;
-    grid-template-rows: repeat(4,120px);
-    grid-gap: 1rem
+.cards {
+  @include margin-top(3rem);
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: repeat(4, 120px);
+  grid-gap: 1rem;
 }
 
-.card{
-    @include card-design();
-    @include rounded(6px);
-    @include grid($columns :repeat(3,1fr));
+.card {
+  @include card-design();
+  @include rounded(6px);
+  @include grid($columns: repeat(3, 1fr));
+}
+
+.card:nth-of-type(1) {
+  grid-row: 2/3;
+  @include b-top(5px, $border2);
+}
+
+.card:nth-of-type(2) {
+  grid-row: 1/3;
+  grid-column: 2/3;
+  @include b-top(5px, $border1);
+}
+
+.card:nth-of-type(3) {
+  grid-row: 3/4;
+  grid-column: 2/3;
+  @include b-top(5px, $border3);
+}
+
+.card:nth-of-type(4) {
+  grid-row: 2/3;
+  @include b-top(5px, $border4);
+}
+
+.card__heading {
+  font-weight: 600;
+  font-size: 1.1rem;
+  grid-column: 1/-1;
+}
+
+.card__content {
+  color: $gray;
+  grid-column: 1/-1;
+}
+
+.card__image {
+  grid-column: 3/4;
 }
