--- a/css/main.css
+++ b/css/main.css
@@ -98,4 +98,40 @@ p {
   grid-column: 3/4;
 }
 
+@media (max-width: 40rem) {
+  .heading-upper,
+.heading-lower {
+    font-size: 1.5rem;
+  }
+
+  .container {
+    padding: 1rem;
+  }
+
+  .cards {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: 260px;
+  }
+
+  .card:nth-of-type(1) {
+    grid-row: 1/2;
+    grid-column: 1/2;
+  }
+
+  .card:nth-of-type(2) {
+    grid-row: 2/3;
+    grid-column: 1/2;
+  }
+
+  .card:nth-of-type(3) {
+    grid-row: 3/4;
+    grid-column: 1/2;
+  }
+
+  .card:nth-of-type(4) {
+    grid-row: 4/5;
+    grid-column: 1/2;
+  }
+}
+
 /*# sourceMappingURL=main.css.map */
